src/main/java/io/github/dsheirer/source/tuner/sdrplay/api/v3_07/sdrplay_api_h.java


    private static class sdrplay_api_ApiVersion {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_ApiVersion");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ApiVersion(float *apiVer)
     * }
     */
    public static FunctionDescriptor sdrplay_api_ApiVersion$descriptor() {
        return sdrplay_api_ApiVersion.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ApiVersion(float *apiVer)
     * }
     */
    public static MethodHandle sdrplay_api_ApiVersion$handle() {
        return sdrplay_api_ApiVersion.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ApiVersion(float *apiVer)
     * }
     */
    public static MemorySegment sdrplay_api_ApiVersion$address() {
        return sdrplay_api_ApiVersion.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ApiVersion(float *apiVer)
     * }
     */
    public static int sdrplay_api_ApiVersion(MemorySegment apiVer) {
        var mh$ = sdrplay_api_ApiVersion.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_ApiVersion", apiVer);
            }
            return (int)mh$.invokeExact(apiVer);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_LockDeviceApi {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT    );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_LockDeviceApi");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_LockDeviceApi()
     * }
     */
    public static FunctionDescriptor sdrplay_api_LockDeviceApi$descriptor() {
        return sdrplay_api_LockDeviceApi.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_LockDeviceApi()
     * }
     */
    public static MethodHandle sdrplay_api_LockDeviceApi$handle() {
        return sdrplay_api_LockDeviceApi.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_LockDeviceApi()
     * }
     */
    public static MemorySegment sdrplay_api_LockDeviceApi$address() {
        return sdrplay_api_LockDeviceApi.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_LockDeviceApi()
     * }
     */
    public static int sdrplay_api_LockDeviceApi() {
        var mh$ = sdrplay_api_LockDeviceApi.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_LockDeviceApi");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_UnlockDeviceApi {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT    );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_UnlockDeviceApi");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_UnlockDeviceApi()
     * }
     */
    public static FunctionDescriptor sdrplay_api_UnlockDeviceApi$descriptor() {
        return sdrplay_api_UnlockDeviceApi.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_UnlockDeviceApi()
     * }
     */
    public static MethodHandle sdrplay_api_UnlockDeviceApi$handle() {
        return sdrplay_api_UnlockDeviceApi.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_UnlockDeviceApi()
     * }
     */
    public static MemorySegment sdrplay_api_UnlockDeviceApi$address() {
        return sdrplay_api_UnlockDeviceApi.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_UnlockDeviceApi()
     * }
     */
    public static int sdrplay_api_UnlockDeviceApi() {
        var mh$ = sdrplay_api_UnlockDeviceApi.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_UnlockDeviceApi");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_GetDevices {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_GetDevices");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDevices(sdrplay_api_DeviceT *devices, unsigned int *numDevs, unsigned int maxDevs)
     * }
     */
    public static FunctionDescriptor sdrplay_api_GetDevices$descriptor() {
        return sdrplay_api_GetDevices.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDevices(sdrplay_api_DeviceT *devices, unsigned int *numDevs, unsigned int maxDevs)
     * }
     */
    public static MethodHandle sdrplay_api_GetDevices$handle() {
        return sdrplay_api_GetDevices.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDevices(sdrplay_api_DeviceT *devices, unsigned int *numDevs, unsigned int maxDevs)
     * }
     */
    public static MemorySegment sdrplay_api_GetDevices$address() {
        return sdrplay_api_GetDevices.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_GetDevices(sdrplay_api_DeviceT *devices, unsigned int *numDevs, unsigned int maxDevs)
     * }
     */
    public static int sdrplay_api_GetDevices(MemorySegment devices, MemorySegment numDevs, int maxDevs) {
        var mh$ = sdrplay_api_GetDevices.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_GetDevices", devices, numDevs, maxDevs);
            }
            return (int)mh$.invokeExact(devices, numDevs, maxDevs);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_SelectDevice {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_SelectDevice");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SelectDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static FunctionDescriptor sdrplay_api_SelectDevice$descriptor() {
        return sdrplay_api_SelectDevice.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SelectDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static MethodHandle sdrplay_api_SelectDevice$handle() {
        return sdrplay_api_SelectDevice.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SelectDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static MemorySegment sdrplay_api_SelectDevice$address() {
        return sdrplay_api_SelectDevice.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_SelectDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static int sdrplay_api_SelectDevice(MemorySegment device) {
        var mh$ = sdrplay_api_SelectDevice.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_SelectDevice", device);
            }
            return (int)mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_ReleaseDevice {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_INT,
            sdrplay_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_ReleaseDevice");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ReleaseDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static FunctionDescriptor sdrplay_api_ReleaseDevice$descriptor() {
        return sdrplay_api_ReleaseDevice.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ReleaseDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static MethodHandle sdrplay_api_ReleaseDevice$handle() {
        return sdrplay_api_ReleaseDevice.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ReleaseDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static MemorySegment sdrplay_api_ReleaseDevice$address() {
        return sdrplay_api_ReleaseDevice.ADDR;
    }

    /**
     * {@snippet lang=c :
     * sdrplay_api_ErrT sdrplay_api_ReleaseDevice(sdrplay_api_DeviceT *device)
     * }
     */
    public static int sdrplay_api_ReleaseDevice(MemorySegment device) {
        var mh$ = sdrplay_api_ReleaseDevice.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("sdrplay_api_ReleaseDevice", device);
            }
            return (int)mh$.invokeExact(device);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class sdrplay_api_GetErrorString {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            sdrplay_api_h.C_POINTER,
            sdrplay_api_h.C_INT
        );

        public static final MemorySegment ADDR = sdrplay_api_h.findOrThrow("sdrplay_api_GetErrorString");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *sdrplay_api_GetErrorString(sdrplay_api_ErrT err)
     * }
     */
    public static FunctionDescriptor sdrplay_api_GetErrorString$descriptor() {
        return sdrplay_api_GetErrorString.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *sdrplay_api_GetErrorString(sdrplay_api_ErrT err)
     * }
     */
    public static MethodHandle sdrplay_api_GetErrorString$handle() {
        return sdrplay_api_GetErrorString.HANDLE;
    }
